apps/oidc-demo/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demoapp
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: demoapp
