apps/oidc-demo/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    name: oauth2-proxy
  ports:
  - port: 4180
    targetPort: 4180
