apps/oidc-demo/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demoapp
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"  
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"  
spec:
  rules:
  - host: demo.alexcook.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demoapp
            port: 
              number: 80
  tls:
  - hosts:
    - demo.alexcook.dev
    secretName: alexcookdev-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  labels:
    name: oauth2-proxy
  annotations: 
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
spec:
  rules:
  - host: demo.alexcook.dev
    http:
      paths:
      - pathType: Prefix
        path: "/oauth2"
        backend:
          service:
            name: oauth2-proxy
            port: 
              number: 4180
  tls:
  - hosts:
    - demo.alexcook.dev
    secretName: alexcookdev-cert
